tdf#75221: make margin collapsing implementation conform OASIS proposal

Since the margin collapsing (aka contextual spacing, implemented
for LO 3.6 by Miklos Vajna, commits
6f04bf5e90ff75288dcf75c43843edf798641e3d,
0662778b0b4b9958ee5e5bd3bac69f9e290f9495,
11059331718fb8faab483c75633b4e80d8028b7d,
03f9b6bebc0ca77021be46664c7bcbe4cb297503,
8631dbf85fb5ed56d225e32ea5a9c36c96b0d649,
9f4bb5bd4f55b4a80544413efde26391849b1d7f,
f722299e133568fe75f7cf9ce0c103a1553474c4) is only meant
to suppress fo:margin-top and fo:margin-bottom, as seen in
https://issues.oasis-open.org/browse/OFFICE-3767, current
implementation is inconsistent: it nullifies all spacing, including
normal line spacing.

This patch makes sure that collapsing conforms to specification.

Change-Id: I413f6469d7891dd85f1f7a2c666f219187ddaec4